fixed typo in helloFriend

--- a/workspace/hello-friend/helloFriend.Rmd
+++ b/workspace/hello-friend/helloFriend.Rmd
@@ -45,11 +45,11 @@ output: pdf_document
 
 |	     After two years at Skagit, I graduated with my Associates of Science in Physics/Engineering. My son was born the week before winter quarter finals. The labor lasted forty-six hours and had many complications. My son was born healthy but spending time with my family made it difficult to complete schoolwork. 
 
-|	     I was soon accepted into the University of Washington. I transferred to the University of Washington concentrating in mathematics. My family and I moved closer to Seattle and my wife gave birth to our second and third child while I was attending the University of Washington. It took me a while to be able to balance family life and school. I have always been a very family oriented individual. I came from a big family and I was now beginning my own. These events had a negative impact on my grades, but not my ultimate ambitions in life of furthering my education. I promised my father, myself, and my son that I will receive my bachelor's degree to create a better future for my family.  
+|	     I was soon accepted into the University of Washington. I transferred to the University of Washington concentrating in mathematics. My family and I moved closer to Seattle and my wife gave birth to our second and third child while I was attending the University of Washington. It took me a while to be able to balance family life and school. I have always been a very family oriented individual. I came from a big family and I was now beginning my own. These events had a negative impact on my grades, but not my ultimate ambitions in life of furthering my education. I promised my father, myself, and my children that I will receive my bachelor's degree to create a better future for my family.  
 
 |	     I was not happy with being a math major, so I applied to Washington State University-Everett Software Engineering program. I was told that I needed to complete a few more prerequisites so I re-enrolled at Skagit Valley College. My family and I moved back to Oak Harbor and I attended Skagit Valley College for one year. After one year, I earned my second associate degree. Today, I am currently in my last year at Washington State University-Everett.
 
 ##  Where you want to go
-|      I am expected to graduate in the Fall of 2021. Upon graduations, I would like to become a professional software engineer who gives back to the community. I care for everyone and I really want to help the less fortunate and anyone who cannot help themselves. I want to be a become a business owner and/or a supervisor.  I am sure that my previous experiences in the military will help me in my professional life because I know how to be a leader, as well as work in diverse groups to achieve a common goal. I believe  that Washington State University will help me become the first person in my family to receive my bachelor's degree. I want my Washington State University software engineering degree to help me create a better future for my three boys, even if they do not want to follow in my shoes.
+|      I am expected to graduate in the Fall of 2021. Upon graduation, I would like to become a professional software engineer who gives back to the community. I care for everyone and I really want to help the less fortunate and anyone who cannot help themselves. I want to be a become a business owner and/or a supervisor.  I am sure that my previous experiences in the military will help me in my professional life because I know how to be a leader, as well as work in diverse groups to achieve a common goal. I believe  that Washington State University will help me become the first person in my family to receive my bachelor's degree. I want my Washington State University software engineering degree to help me create a better future for my three boys, even if they do not want to follow in my shoes.
 
 
